View Issue Details

IDProjectCategoryView StatusLast Update
0032342Open CASCADEOCCT:DRAWpublic2021-05-01 13:32
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
OSEmscsripten 
Product Version7.6.0 
Target Version7.6.0Fixed in Version7.6.0 
Summary0032342: Draw Harness - preload basic Tcl scripts into WebAssembly
DescriptionWhile building Draw Harness using Emscripten SDK, DRAWEXE is unable to locate two standard Tcl script sets:
- Draw Harness scripts from DrawResources
- Tcl scripts from $tcl_library/init.tcl
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot required

Activities

git

2021-04-30 11:28

administrator   ~0100688

Branch CR32342 has been created by kgv.

SHA-1: 6d76c8b7078a2de6e589ec1dbdebe747b2a6f2a7


Detailed log of new commits:

Author: kgv
Date: Thu Apr 29 22:13:20 2021 +0300

    0032342: Draw Harness - preload basic Tcl scripts into WebAssembly
    
    DrawResources Tcl scripts and $tcl_library (init.tcl) are now preloaded into WebAssembly emulated filesystem for DRAWEXE.wasm.
    DRAWEXE now mimics "pload" command for statically linked plugins.

kgv

2021-04-30 11:29

developer   ~0100689

Patch is ready for review
- OCCT: branch CR32342.

osa

2021-04-30 12:43

developer   ~0100693

The patch is reviewed

bugmaster

2021-05-01 12:28

administrator   ~0100724

Combination -
OCCT branch : master
Products branch : master
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17839.600000000362 / 17844.450000000477 [-0.03%]
Products
Total CPU difference: 11562.480000000109 / 11558.800000000136 [+0.03%]
Windows-64-VC14:
OCCT
Total CPU difference: 19303.28125 / 19431.828125 [-0.66%]
Products
Total CPU difference: 12894.515625 / 12871.203125 [+0.18%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-05-01 13:32

administrator   ~0100735

Branch CR32342 has been deleted by inv.

SHA-1: 6d76c8b7078a2de6e589ec1dbdebe747b2a6f2a7

Related Changesets

occt: master 977d3d47

2021-04-29 19:13:20

kgv


Committer: bugmaster Details Diff
0032342: Draw Harness - preload basic Tcl scripts into WebAssembly

DrawResources Tcl scripts and $tcl_library (init.tcl) are now preloaded into WebAssembly emulated filesystem for DRAWEXE.wasm.
DRAWEXE now mimics "pload" command for statically linked plugins.
Affected Issues
0032342
mod - src/DRAWEXE/CMakeLists.txt Diff File
mod - src/DRAWEXE/DRAWEXE.cxx Diff File

Issue History

Date Modified Username Field Change
2021-04-30 11:18 kgv New Issue
2021-04-30 11:18 kgv Assigned To => kgv
2021-04-30 11:28 git Note Added: 0100688
2021-04-30 11:29 kgv Note Added: 0100689
2021-04-30 11:29 kgv Assigned To kgv => osa
2021-04-30 11:29 kgv Status new => resolved
2021-04-30 12:43 osa Note Added: 0100693
2021-04-30 12:43 osa Assigned To osa => bugmaster
2021-04-30 12:43 osa Status resolved => reviewed
2021-05-01 12:28 bugmaster Note Added: 0100724
2021-05-01 12:28 bugmaster Status reviewed => tested
2021-05-01 12:41 bugmaster Test case number => Not required
2021-05-01 12:44 bugmaster Changeset attached => occt master 977d3d47
2021-05-01 12:44 bugmaster Status tested => verified
2021-05-01 12:44 bugmaster Resolution open => fixed
2021-05-01 13:32 git Note Added: 0100735